--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/styles": "^5.15.15",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.2",
     "faker": "^5.5.3",
