--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.2",
     "faker": "^5.5.3",
@@ -24,6 +25,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.6"
