--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/chart.js": "^2.9.41",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "faker": "^5.5.3",
     "react": "^18.2.0",
